@@ -4,6 +4,7 @@
  Fixed a bug where the user agent would sign the wrong POST data.
  The update operation no longer returns a redirect.
  Many to many fields now appear in the data arrays section of the instance fields rather than with the other fields.
+ The user agent POST requester can now be provided with a list of status codes that it will accept as successful and if it cannot parse the JSON body it will return an empty dict.
 
 2012-04-18  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a problem where forwarded authentication could lead to an infinite recursion error.
